--- a/index.html
+++ b/index.html
@@ -20,24 +20,27 @@
     <h3 class="factsSecondaryHeading">List of facts</h3>
 
     <div class="factList">
+      <div class="accordion-body">
+          <div class="accordion">
+            <div class="container">
+              <div class="label">Fact</div>
+              <!-- <div class="factDesription">Hypertext Markup Language (HTML) is a computer languagestyle and structure of a document. HTML is very simple to learn and use.</div> -->
+            </div>
+            <hr>
+            <div class="container">
+              <div class="label">Fact</div>
+              <!-- <div class="content">CSS stands for Cascading Style Sheets. It is the lindependent of HTML and can be used with any XML-based markup language. CSS is popularly called the design language of the web.</div> -->
+            </div>
+            <hr>
+            <div class="container">
+              <div class="label">Fact</div>
+              <!-- <div class="content">JavaScript is a scripting or programming language that amaps, animated 2D/3D graphics, scrolling video jukeboxes, etc. — you can bet that JavaScript is probably involved. It is the third of the web trio.</div> -->
+            </div>
+            <hr>
+          </div>
+        </div>
       <!-- <div class="factItem">
         <div class="factDesription" id="fact1">Fact 1</div>
-      </div> -->
-
-      <!-- <div class="factItem">
-        <div class="factDesription" id="fact2">Fact 2</div>
-      </div>
-
-      <div class="factItem">
-        <div class="factDesription" id="fact3">Fact 3</div>
-      </div>
-
-      <div class="factItem">
-        <div class="factDesription" id="fact4">Fact 4</div>
-      </div>
-
-      <div class="factItem">
-        <div class="factDesription" id="fact5">Fact 5</div>
       </div> -->
     </div>
   </div>
