--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div class="accordion">
             <div class="container">
               <div class="label">Fact</div>
-              <!-- <div class="factDesription">Hypertext Markup Language (HTML) is a computer languagestyle and structure of a document. HTML is very simple to learn and use.</div> -->
+              <div class="content">Hypertext Markup Language (HTML) is a computer languagestyle and structure of a document. HTML is very simple to learn and use.</div>
             </div>
             <hr>
             <div class="container">
