--- a/index.html
+++ b/index.html
@@ -23,20 +23,17 @@
       <div class="accordion-body">
           <div class="accordion">
             <div class="container">
-              <div class="label">Fact</div>
-              <div class="content">Hypertext Markup Language (HTML) is a computer languagestyle and structure of a document. HTML is very simple to learn and use.</div>
+              <div class="label">Click to open fact</div>
             </div>
-            <hr>
             <div class="container">
-              <div class="label">Fact</div>
-              <!-- <div class="content">CSS stands for Cascading Style Sheets. It is the lindependent of HTML and can be used with any XML-based markup language. CSS is popularly called the design language of the web.</div> -->
+              <div class="label">Click to open fact</div>
             </div>
-            <hr>
             <div class="container">
-              <div class="label">Fact</div>
-              <!-- <div class="content">JavaScript is a scripting or programming language that amaps, animated 2D/3D graphics, scrolling video jukeboxes, etc. — you can bet that JavaScript is probably involved. It is the third of the web trio.</div> -->
+              <div class="label">Click to open fact</div>
             </div>
-            <hr>
+            <div class="logo-div">
+              <img class="logo" src="assests/Logo.svg" alt="">
+            </div>
           </div>
         </div>
       <!-- <div class="factItem">
